tests/errors/undefined-macro.spcasmtest
org 0

macro does_ot_exist
endmacro

%does_not_exist()
